# backpack-str

./: .gitignore  README.md  cabal.project  gen-table.sh
str-bytestring/: str-bytestring.cabal
str-bytestring/Str/: ByteString.hs
str-bytestring/Str/ByteString/: Char8.hs  Lazy.hs
str-bytestring/Str/ByteString/Lazy/: Char8.hs
str-bytestring/partial/: str-bytestring-partial.cabal
str-bytestring/partial/Str/ByteString/: Partial.hs
str-bytestring/partial/Str/ByteString/Char8/: Partial.hs
str-bytestring/partial/Str/ByteString/Lazy/: Partial.hs
str-bytestring/partial/Str/ByteString/Lazy/Char8/: Partial.hs
str-bytestring/tests/: Str.hsig  StrChar8.hsig  StrLazy.hsig  StrLazyChar8.hsig  str-bytestring-test.cabal
str-foundation/: str-foundation.cabal
str-foundation/Str/: Foundation.hs
str-foundation/partial/: str-foundation-partial.cabal
str-foundation/partial/Str/Foundation/: Partial.hs
str-foundation/tests/: Str.hsig  str-foundation-test.cabal
str-sig/: ChangeLog.md  LICENSE  README.md  Str.hsig  str-sig.cabal
str-string/: ChangeLog.md  str-string.cabal
str-string/Str/: String.hs
str-string/partial/: ChangeLog.md  LICENSE  str-string-partial.cabal
str-string/partial/Str/String/: Partial.hs
str-string/tests/: Str.hsig  str-string-test.cabal
str-tests-compare/: AStr.hsig  BStr.hsig  Instances.hsig  LICENSE  str-tests-compare.cabal
str-tests-compare/Str/Tests/: Compare.hs
str-tests-compare/insts/: Instances.hs
str-tests-compare/insts/Str/ByteString/: Instances.hs
str-tests-compare/insts/Str/Foundation/: Instances.hs
str-tests-compare/insts/Str/Text/: Instances.hs
str-tests-compare/main/: Main.hs
str-tests-compare/partial/Str/ByteString/: Partial.hs
str-tests-compare/partial/Str/ByteString/Char8/: Partial.hs
str-tests-compare/partial/Str/ByteString/Lazy/: Partial.hs
str-tests-compare/partial/Str/ByteString/Lazy/Char8/: Partial.hs
str-tests-compare/partial/Str/Text/: Partial.hs
str-tests-compare/partial/Str/Text/Lazy/: Partial.hs
str-text/: str-text.cabal
str-text/Str/: Text.hs
str-text/Str/Text/: Lazy.hs
str-text/partial/: str-text-partial.cabal
str-text/partial/Str/Text/: Partial.hs
str-text/partial/Str/Text/Lazy/: Partial.hs
str-text/sigs/v1/: str-text-v1.cabal
str-text/tests/: Str.hsig  StrLazy.hsig  str-text-test.cabal
str-undefined/: ChangeLog.md  LICENSE  Str.hsig  str-undefined.cabal
str-undefined/Str/: Undefined.hs
str-v1/: Str.hsig  str-v1.cabal
