name:                str-bytestring
version:             0.1.0.0
synopsis:            Adaptor modules for ByteStrings which implement the Str signature
description:         Adaptor modules for ByteString which provide a type named
                     Str and can be used to fill packages parametrized
                     by str-sig.
license:             BSD3
license-file:        LICENSE
author:              Edward Z. Yang
maintainer:          ezyang@cs.stanford.edu
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.25

library
  exposed-modules:     Str.ByteString
                       Str.ByteString.Char8
                       Str.ByteString.Lazy
                       Str.ByteString.Lazy.Char8
  reexported-modules:  Str.ByteString as Str
  build-depends:       base >= 4.9,
                       bytestring >= 0.10.8 && < 0.11
  default-language:    Haskell2010
