name:                str-sig
version:             0.1.0.0
synopsis:            Signature package for String-like types.
description:         This package provides a Str signature which defines
                     common namespace of all string operations supported
                     by the str packages.
                     .
                     This package will never introduce a backwards incompatible
                     change in an update; however, we may release new versions
                     of this signature which add methods; to obey the PVP,
                     please locally declare specifically which methods from
                     this signature you are using.
license:             BSD3
license-file:        LICENSE
author:              Edward Z. Yang
maintainer:          ezyang@cs.stanford.edu
category:            Signature
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.25

library
  signatures:          Str
  build-depends:       base >= 4.10,
                       deepseq
  default-language:    Haskell2010
