name:                str-sig
version:             0.1.0.0
synopsis:            Signature package for String-like types.
description:         This package provides a Str signature which defines
                     common namespace of functionality provided by
                     string packages.  Implementations of subsets of
                     this signature can be found in str-string,
                     str-bytestring, str-text and str-foundation.
                     .
                     This package will never introduce a backwards
                     incompatible change in an update; however, we may
                     release new versions of this signature which add
                     methods. To ensure that your code continues
                     working, please locally declare which methods from
                     this signature you are using.
license:             BSD3
license-file:        LICENSE
author:              Edward Z. Yang
maintainer:          ezyang@cs.stanford.edu
category:            Signature
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >= 1.25

library
  signatures:          Str
  build-depends:       base >= 4.10 && < 4.11
  default-language:    Haskell2010
