name:                str-tests-compare
version:             0.1.0.0
synopsis:            Testing package for comparing string implementations
description:         This library when instantiated with two different
                     string types compares them to see if the act in observably
                     the same way.
license:             BSD3
license-file:        LICENSE
author:              Edward Z. Yang
maintainer:          ezyang@cs.stanford.edu
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 2.0

library
  exposed-modules:     Str.Tests.Compare
  build-depends:       base >= 4.10 && < 4.11,
                       QuickCheck >= 2.3,
                       test-framework,
                       test-framework-quickcheck2,
                       str-sig >= 0.1
  mixins:              str-sig requires (Str as AStr),
                       str-sig requires (Str as BStr)
  ghc-options:         -fno-enable-rewrite-rules
  default-language:    Haskell2010

library insts
  exposed-modules:     Str.ByteString.Instances
                       Str.Text.Instances
  hs-source-dirs:      insts
  build-depends:       base,
                       bytestring,
                       text,
                       QuickCheck
  default-language:    Haskell2010

library partial
  exposed-modules:     Str.ByteString.Partial
                       Str.ByteString.Char8.Partial
                       Str.ByteString.Lazy.Char8.Partial
                       Str.ByteString.Lazy.Partial
                       Str.String.Partial
                       Str.Text.Partial
  hs-source-dirs:      partial
  build-depends:       str-undefined,
                       str-bytestring,
                       str-string,
                       str-text,
                       insts,
                       base
  mixins:              str-undefined (Str.Undefined as Str.ByteString.Undefined)
                            requires (Str as Str.ByteString),
                       str-undefined (Str.Undefined as Str.ByteString.Char8.Undefined)
                            requires (Str as Str.ByteString.Char8),
                       str-undefined (Str.Undefined as Str.ByteString.Lazy.Undefined)
                            requires (Str as Str.ByteString.Lazy),
                       str-undefined (Str.Undefined as Str.ByteString.Lazy.Char8.Undefined)
                            requires (Str as Str.ByteString.Lazy.Char8),
                       str-undefined (Str.Undefined as Str.String.Undefined)
                            requires (Str as Str.String),
                       str-undefined (Str.Undefined as Str.Text.Undefined)
                            requires (Str as Str.Text),
                       str-undefined (Str.Undefined as Str.Text.Lazy.Undefined)
                            requires (Str as Str.Text.Lazy)
  default-language:    Haskell2010

test-suite bl-b
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      main
  build-depends:       str-tests-compare,
                       partial,
                       test-framework,
                       base
  mixins:              partial (Str.ByteString.Lazy.Partial as AStr,
                                Str.ByteString.Partial as BStr)
  default-language:    Haskell2010

test-suite blc-bl
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      main
  build-depends:       str-tests-compare,
                       partial,
                       test-framework,
                       base
  mixins:              partial (Str.ByteString.Lazy.Char8.Partial as AStr,
                                Str.ByteString.Char8.Partial as BStr)
  default-language:    Haskell2010

test-suite b-s
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      main
  build-depends:       str-tests-compare,
                       partial,
                       test-framework,
                       base
  mixins:              partial (Str.ByteString.Char8.Partial as AStr,
                                Str.String.Partial as BStr)
  default-language:    Haskell2010

test-suite t-s
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      main
  build-depends:       str-tests-compare,
                       partial,
                       test-framework,
                       base
  mixins:              partial (Str.Text.Partial as AStr,
                                Str.String.Partial as BStr)
  default-language:    Haskell2010
