name:                str-tests-compare
version:             0.1.0.0
synopsis:            Testing package for comparing string implementations
description:         This library when instantiated with two different
                     string types compares them to see if the act in observably
                     the same way.
license:             BSD3
license-file:        LICENSE
author:              Edward Z. Yang
maintainer:          ezyang@cs.stanford.edu
category:            Str
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 2.0

flag foundation
  description: Test foundation
  default: True

library
  exposed-modules:     Str.Tests.Compare
  build-depends:       base >= 4.10 && < 4.11,
                       QuickCheck >= 2.3,
                       test-framework,
                       test-framework-quickcheck2,
                       str-sig >= 0.1
  signatures:          AStr BStr Instances
  mixins:              str-sig requires (Str as AStr),
                       str-sig requires (Str as BStr)
  ghc-options:         -fno-enable-rewrite-rules
  default-language:    Haskell2010

library insts
  exposed-modules:     Instances
                       Str.ByteString.Instances
                       Str.Text.Instances
  hs-source-dirs:      insts
  build-depends:       base,
                       bytestring,
                       text,
                       QuickCheck
  if flag(foundation)
    build-depends:     foundation
    exposed-modules:   Str.Foundation.Instances
  default-language:    Haskell2010

test-suite bl-b
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      main
  build-depends:       str-tests-compare,
                       str-bytestring-partial,
                       insts,
                       test-framework,
                       base
  mixins:              str-bytestring-partial (Str.ByteString.Lazy.Partial as AStr,
                                               Str.ByteString.Partial as BStr)
  default-language:    Haskell2010

test-suite blc-bl
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      main
  build-depends:       str-tests-compare,
                       str-bytestring-partial,
                       insts,
                       test-framework,
                       base
  mixins:              str-bytestring-partial (Str.ByteString.Lazy.Char8.Partial as AStr,
                                               Str.ByteString.Char8.Partial as BStr)
  default-language:    Haskell2010

test-suite b-s
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      main
  build-depends:       str-tests-compare,
                       str-bytestring-partial,
                       str-string-partial,
                       insts,
                       test-framework,
                       base
  mixins:              str-bytestring-partial (Str.ByteString.Char8.Partial as AStr),
                       str-string-partial     (Str.String.Partial as BStr)
  default-language:    Haskell2010

test-suite t-s
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      main
  build-depends:       str-tests-compare,
                       str-text-partial,
                       str-string-partial,
                       insts,
                       test-framework,
                       base
  mixins:              str-text-partial (Str.Text.Partial as AStr),
                       str-string-partial (Str.String.Partial as BStr)
  default-language:    Haskell2010

test-suite f-s
  if !flag(foundation)
    buildable: False
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      main
  build-depends:       str-tests-compare,
                       str-foundation-partial,
                       str-string-partial,
                       insts,
                       test-framework,
                       base
  mixins:              str-foundation-partial (Str.Foundation.Partial as AStr),
                       str-string-partial (Str.String.Partial as BStr)
  default-language:    Haskell2010
