name:                str-text
version:             0.1.0.0
synopsis:            Adaptor modules for Text which implement the Str signature
description:         Adaptor modules for Text which provide a type named
                     Str and can be used to fill packages parametrized
                     by str-v1.
license:             BSD3
license-file:        LICENSE
author:              Edward Z. Yang
maintainer:          ezyang@cs.stanford.edu
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.20

library
  exposed-modules:     Str.Text
                       Str.Text.Lazy
  reexported-modules:  Str.Text as Str
  build-depends:       base >= 4.9, text >= 1.2 && < 1.3
  default-language:    Haskell2010
