name:                str-v1
version:             0.0
synopsis:            Signature package for String-like types.
description:         This package provides a Str signature which defines
                     common namespace of all string operations supported
                     by the str packages.
                     .
                     For implementations of this signature, see the
                     package str-bytestring.
license:             BSD3
license-file:        LICENSE
author:              Edward Z. Yang
maintainer:          ezyang@cs.stanford.edu
category:            Signature
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.25

library
  signatures:          Str
  build-depends:       base >= 4.10,
                       deepseq
  default-language:    Haskell2010
