name:                str-bytestring-partial
version:             0.1.0.0
synopsis:            str-bytestring with placeholders for missing implementations
description:         This package contains Partial variants of the modules from
                     str-bytestring, where any str-sig functions which were missing
                     from str-bytestring have been filled with placeholder
                     implementations which will fail at runtime.  You can use
                     this to defer match errors to runtime exceptions, which
                     can be caught and handled like other exceptions.
license:             BSD3
author:              Edward Z. Yang
maintainer:          ezyang@cs.stanford.edu
category:            Str
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.25

library
  exposed-modules:     Str.ByteString.Partial
                       Str.ByteString.Char8.Partial
                       Str.ByteString.Lazy.Char8.Partial
                       Str.ByteString.Lazy.Partial
  build-depends:       str-undefined  == 0.1.0.*,
                       str-bytestring == 0.1.0.*,
                       base
  mixins:              str-undefined (Str.Undefined as Str.ByteString.Undefined)
                            requires (Str as Str.ByteString),
                       str-undefined (Str.Undefined as Str.ByteString.Char8.Undefined)
                            requires (Str as Str.ByteString.Char8),
                       str-undefined (Str.Undefined as Str.ByteString.Lazy.Undefined)
                            requires (Str as Str.ByteString.Lazy),
                       str-undefined (Str.Undefined as Str.ByteString.Lazy.Char8.Undefined)
                            requires (Str as Str.ByteString.Lazy.Char8)
  default-language:    Haskell2010

test-suite implements
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:
    base,
    str-bytestring-partial,
    str-sig
  mixins:
    str-sig requires (Str as Str.ByteString.Partial),
    str-sig requires (Str as Str.ByteString.Char8.Partial),
    str-sig requires (Str as Str.ByteString.Lazy.Partial),
    str-sig requires (Str as Str.ByteString.Lazy.Char8.Partial)
  default-language:    Haskell2010
