name:                str-bytestring-test
version:             0.1.0.0
synopsis:            Tests for bytestring-text (using Backpack features)
license:             BSD3
author:              Edward Z. Yang
maintainer:          ezyang@cs.stanford.edu
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.25

library bytestring-sig
  signatures:          Str
  reexported-modules:  Prelude
  build-depends:       base >= 4.9, str-sig
  default-language:    Haskell2010

library bytestring-char8-sig
  signatures:          StrChar8
  reexported-modules:  Prelude
  build-depends:       base >= 4.9, str-sig
  mixins:              str-sig requires (Str as StrChar8)
  default-language:    Haskell2010

library bytestring-lazy-sig
  signatures:          StrLazy
  reexported-modules:  Prelude
  build-depends:       base >= 4.9, str-sig
  mixins:              str-sig requires (Str as StrLazy)
  default-language:    Haskell2010

test-suite implements
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:
    base,
    bytestring-sig,
    str-bytestring
  default-language:    Haskell2010

test-suite implements-char8
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:
    base,
    bytestring-char8-sig,
    str-bytestring
  mixins: str-bytestring (Str.ByteString.Char8 as StrChar8)
  default-language:    Haskell2010

test-suite implements-lazy
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:
    base,
    bytestring-lazy-sig,
    str-bytestring
  mixins: str-bytestring (Str.ByteString.Lazy as StrLazy)
  default-language:    Haskell2010
