name:                str-foundation-test
version:             0.0
synopsis:            Tests for str-foundation (using Backpack features)
license:             BSD3
author:              Edward Z. Yang
maintainer:          ezyang@cs.stanford.edu
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.25

library foundation-sig
  signatures:          Str
  reexported-modules:  Prelude
  build-depends:       base >= 4.9, str-sig
  default-language:    Haskell2010

test-suite implements
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:
    base,
    foundation-sig,
    str-foundation
  default-language:    Haskell2010
