name:                str-string-partial
version:             0.0
synopsis:            Tests for str-string (using Backpack features)
license:             BSD3
author:              Edward Z. Yang
maintainer:          ezyang@cs.stanford.edu
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.25

library
  exposed-modules:     Str.String.Partial
  build-depends:       str-undefined,
                       str-string,
                       base
  mixins:              str-undefined (Str.Undefined as Str.String.Undefined)
                            requires (Str as Str.String)
  default-language:    Haskell2010

library shim
  reexported-modules:  Prelude
  build-depends:       base, str-sig
  default-language:    Haskell2010

test-suite implements
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:
    base,
    str-string-partial,
    shim
  mixins:
    shim requires (Str as Str.String.Partial)
  default-language:    Haskell2010
