name:                str-text-partial
version:             0.1.0.0
synopsis:            str-text with placeholders for missing implementations
description:         This package contains Partial variants of the modules from
                     str-text, where any str-sig functions which were missing
                     from str-text have been filled with placeholder
                     implementations which will fail at runtime.  You can use
                     this to defer match errors to runtime exceptions, which
                     can be caught and handled like other exceptions.
license:             BSD3
author:              Edward Z. Yang
maintainer:          ezyang@cs.stanford.edu
category:            Str
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.25

library
  exposed-modules:     Str.Text.Partial
                       Str.Text.Lazy.Partial
  build-depends:       str-undefined,
                       str-text == 0.1.0.*,
                       base
  mixins:              str-undefined (Str.Undefined as Str.Text.Undefined)
                            requires (Str as Str.Text),
                       str-undefined (Str.Undefined as Str.Text.Lazy.Undefined)
                            requires (Str as Str.Text.Lazy)
  default-language:    Haskell2010

test-suite implements
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:
    base,
    str-text-partial,
    str-sig
  mixins:
    str-sig requires (Str as Str.Text.Partial),
    str-sig requires (Str as Str.Text.Lazy.Partial)
  default-language:    Haskell2010
