name:                str-text-test
version:             0.0
synopsis:            Tests for str-text (using Backpack features)
license:             BSD3
author:              Edward Z. Yang
maintainer:          ezyang@cs.stanford.edu
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.25

library text-sig
  signatures:          Str
  reexported-modules:  Prelude
  build-depends:       base >= 4.9, str-sig
  default-language:    Haskell2010

library text-lazy-sig
  signatures:          StrLazy
  reexported-modules:  Prelude
  build-depends:       base >= 4.9, str-sig
  mixins:              str-sig requires (Str as StrLazy)
  default-language:    Haskell2010

test-suite implements
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:
    base,
    text-sig,
    str-text
  default-language:    Haskell2010

test-suite implements-lazy
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:
    base,
    text-lazy-sig,
    str-text
  mixins:              str-text (Str.Text.Lazy as StrLazy)
  default-language:    Haskell2010
