name:                str-text-v1
version:             0.0
synopsis:            Signature for Str.Text
description:         Signature containing only the operations supported by the 0.1
                     release series of Str.Text.
license:             BSD3
author:              Edward Z. Yang
maintainer:          ezyang@cs.stanford.edu
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.25

library
  exposed-modules:     Str
  build-depends:       base >= 4.9, str-v1
  default-language:    Haskell2010

test-suite implements
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:
    base,
    str-text-v1,
    str-text
  default-language:    Haskell2010
